--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma": "^0.12.19",
     "karma-jasmine": "^0.1.5",
-    "grunt-karma": "^0.8.3"
+    "grunt-karma": "^0.8.3",
+    "karma-chrome-launcher": "^0.1.4"
   },
   "engines": {
     "node": ">=0.10.0"
