--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "karma-chrome-launcher": "^0.1.4",
     "protractor": "^1.0.0",
     "grunt-protractor-runner": "^1.1.0",
-    "grunt-istanbul": "^0.3.0"
+    "grunt-istanbul": "^0.3.0",
+    "karma-coverage": "^0.2.5"
   },
   "scripts": {
     "test": "grunt test"
